--- a/html_entr_6.html
+++ b/html_entr_6.html
@@ -11,10 +11,10 @@
 			<span>Your name</span>
 			<br>
 			<b>Age: </b>
-			<span>Your name</span>
+			<span>Your age</span>
 			<br>
 			<b>Phone number: </b>
-			<span>Your name</span>
+			<span>Your phone number</span>
 			<br>
 			<b>Address: </b>
 			<p>Your adress</p>
