--- a/html_entr_6.html
+++ b/html_entr_6.html
@@ -17,7 +17,10 @@
 			<span>Your phone number</span>
 			<br>
 			<b>Address: </b>
-			<p>Your adress</p>
+			<span>Your address</span>
+			<br>
+			<img src="image.jpg" alt="Image" width="120" height="200" />
+			<iframe width="300" height="200" src="https://www.youtube.com/embed/jTc3ShyuDV0?start=5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</section>
 		<section>
 		</section>
